--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+<div id="blue">
+  bleu
+</div>
+<div id="white">
+  blanc 
+</div>
 
-  Capture and Share the World's Moments
+<div id="bigbox">
+  <div id="phone">
+    <img id="iphoneImage" src="./images/phones.png" alt="">
+  </div>
+  <div id="right">
+    <div id="insta"> 
+      <div id="logo">
+        <img src="./images/brand.png" alt="logo">
+      </div>
+      <div id="button">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="butt"><img id="home" src="./images/home.png" alt=""></div>
+        <div class="butt">LOG IN</div>
+      </div>
+    </div>
+    <div id="text"> 
+      <div id="textCompare">
+          <h3>Capture and Share the World's Moments</h3>
+        <p>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+            You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?
+        </p>
+      </div>
+      <div id="badge">
+        <div class="badges">
+          <img src="./images/badge-iphone.png" alt="">
+        </div>
+        <div class="badges"></div>
+          <img src="./images/badge-android.png" alt="">
+      </div>
+    </div>
+  </div>
+  <div id="bottom">
+        <div class="bot">About Us</div>
+        <div class="bot">Support</div>
+        <div class="bot">Blog</div>
+        <div class="bot">Press</div>
+        <div class="bot">API</div>
+        <div class="bot">Jobs</div>
+        <div class="bot">Privacy</div>
+        <div class="bot">Terms</div>
+        <div class="bot">&copy; 2014 Instagram</div>
+  </div>
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+  
 </body>
 </html>
