--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="/Users/c.diaz/Documents/GitHub/lab-css-instagram-clone/starter-code/css/main.css">.
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="header-background"></div>
+  <div class="wrapper">
+    <div class="information">
+      <div class="right">
+        <img src="/Users/c.diaz/Documents/GitHub/lab-css-instagram-clone/starter-code/images/phones.png" alt="Instagram">
+      </div>
+      <section class="left">
+        <div class="top">
+          <img src="/Users/c.diaz/Documents/GitHub/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram">
+          <button class="main-btn">
+            <div class="bnt-content"></div>
+            <img class="btn-img" src="/Users/c.diaz/Documents/GitHub/lab-css-instagram-clone/starter-code/images/home.png"
+              alt="Log In">
+            <span class="btn-text">Log In</span>
+          </button>
+        </div>
+        <div class="bottom">
+          <div class="content">
+            <h1>Capture and Share <br/>
+              the World's Moments</h1>
+            <article>
+              Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family. <br /><br/>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+              it's
+              that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br /><br/>
+              Oh yeah, did we mention it's free?
+            </article>
+            <div class="download">
+              <div class="cta1">
+                <img src="/Users/c.diaz/Documents/GitHub/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="Download on the App Store">
+              </div>
+              <div class="cta2">
+                <img src="/Users/c.diaz/Documents/GitHub/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Get it on Google Play">
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
+
 </html>
