--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,28 +4,45 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <section id="top">
+    <div id="content">
+      <div id="content-left">
+        <img src="images/phones.png" alt="phones">
+      </div>
+      <div id="content-right">
+        <img src="images/brand.png" alt="brand">
+        <div id="login-button">
+          <img src="images/home.png" alt="home">
+          <a href="#">Log in</a>
+        </div>
+        <div id="text">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            
+              Oh yeah, did we mention it's free?</p>
+          <div id="buttons">
+            <img src="images/badge-iphone.png" alt="iphone">
+            <img src="images/badge-android.png" alt="android">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section id="bottom">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+    <p>&copy; 2014 Instagram</p>
+  </section>
 </body>
 </html>
