--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class = "section1">
+  <section>
+    <img src="images/phones.png">
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class = "section2">
+    <div class = "section3">
+        <img src="images/brand.png">
+      <button class = "logIn">
+        <img src = "images/home.png" class = "logImg">
+        Log In
+      </button>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div >
+      <div class = "txt">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel,
+          then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter,
+          Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class = "android">
+          <img src="images/badge-iphone.png" class = "phone">
+          <img src="images/badge-android.png" class = "phone">
+      </div>
+    </div>
+  </section>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer class = "footerP">
+    <p>About Us</p>
+    <p>Support</p>
+    <p>Blog</p>
+    <p>Press</p>
+    <p>API</p>
+    <p>Jobs</p>
+    <p>Privacy</p>
+    <p>Terms</p>
 
-  &copy; 2014 Instagram
+    <p>&copy; 2014 Instagram</p>
+  </footer>
+
 </body>
+
 </html>
