--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
   <section id="top">
@@ -10,39 +11,47 @@
         <img src="images/phones.png" alt="phones">
       </div>
       <div id="content-right">
-        <img src="images/brand.png" alt="brand">
-        <div id="login-button">
-          <img src="images/home.png" alt="home">
-          <a href="#">Log in</a>
+        <div id="title-bar">
+          <img id="insta-logo" src="images/brand.png" alt="brand">
+          <div id="login-button">
+            <div id="login-button-wrapper">
+              <img src="images/home.png" alt="home">
+              <a href="#">Log in</a>
+            </div>
+          </div>
         </div>
         <div id="text">
-          <h2>Capture and Share the World's Moments</h2>
-          <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-            
-              Oh yeah, did we mention it's free?</p>
-          <div id="buttons">
-            <img src="images/badge-iphone.png" alt="iphone">
-            <img src="images/badge-android.png" alt="android">
+          <div id="text-wrapper">
+            <h2>Capture and Share<br>the World's Moments</h2>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+              <br>
+              <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <br>
+              <br>Oh yeah, did we mention it's free?</p>
+            <div id="buttons">
+              <img src="images/badge-iphone.png" alt="iphone">
+              <img src="images/badge-android.png" alt="android">
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
   
-  <section id="bottom">
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Support</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Press</a></li>
-      <li><a href="#">API</a></li>
-      <li><a href="#">Jobs</a></li>
-      <li><a href="#">Privacy</a></li>
-      <li><a href="#">Terms</a></li>
-    </ul>
-    <p>&copy; 2014 Instagram</p>
-  </section>
+  <footer class="clearfix">
+    <div id="footer-wrapper">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><span id="copyright">&copy; 2014 INSTAGRAM</span></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
