--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="./css/main.css" />
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <header>
+    <div class="header-content">
+        <img class="inBlockVAgn" src="./images/brand.png">
+        <div class="button inBlockVAgn">
+          <img class="inBlockVAgn" src="./images/home.png">
+          <span>Login</span>
+        </div>    
+    </div>
+  </header>
+  <div class="main">
+    <div class="phones">
+      <img class="" src="./images/phones.png">
+    </div>
+    <div class="frame">
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <h1>Capture and Share the World's Moments</h1>
+      <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          <br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br><br>
+          Oh yeah, did we mention it's free?
+          <br>
+      </p>
+      <div class="buttons">
+          <img src="./images/badge-iphone.png">
+          <img src="./images/badge-android.png">
+      </div>
+    </div>
+    <div class="links">
+      <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+      </ul>
+      <span>
+        &copy; 2014 Instagram
+      </span>
+    </div>
+    
+  </div>
 </body>
 </html>
