--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram test commit
+  <div class="main-container">
+  
+  <!-- Instagram -->
+  <!-- phone -->
+  <div class="box">
+    <div class="phone">
+      <img src="images/phones.png">
+    </div>
 
-  Capture and Share the World's Moments
+  <div class="overview">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <img src="images/brand.png">
+    <div class="Log-in">
+     <img src="images/home.png"> Log in
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="content">
+      <h1>Capture and Share the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+      <img src="images/badge-iphone.png" alt = "Apple store">
+      <img src="images/badge-android.png" alt ="Google store">
+    </div>
+
+  </div>
+
+  <div class="clear-float"></div>
+
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+  </div>
+  </div>
 </body>
 </html>
