--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css"> 
 </head>
 <body>
-  Instagram
+  <header>
+  </header>
+<div class="box1">
+  <div class="box-phones">
+      <img class="phones"  src="./images/phones.png" alt="phones">
+  </div>
+  <div class="box-information">
+    <div>
+        <img class="brand"  src="./images/brand.png" alt="brand">
+        <img class="home" src="./images/home.png" alt="home"> Log in
+    </div>    
+  </div>
+</div>
 
   Capture and Share the World's Moments
 
@@ -19,7 +32,7 @@
 
   About Us
   Support
-  Blog
+  Blo
   Press
   API
   Jobs
