--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,34 +11,51 @@
   <div class="box-phones">
       <img class="phones"  src="./images/phones.png" alt="phones">
   </div>
-  <div class="box-information">
+  <div class="box-2">
     <div>
         <img class="brand"  src="./images/brand.png" alt="brand">
-        <img class="home" src="./images/home.png" alt="home"> Log in
+      <div class="button"> 
+          <img class="home" src="./images/home.png" alt="home"> 
+          <a class="login">
+            Log in
+          </a>
+      </div>
     </div>    
+    <div class="box-white">
+      <h1 class="h1">
+        Capture and Share the World's Moments
+      </h1>
+      <h2 class="h2">
+        Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. <br><br>
+
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br><br>
+      
+        Oh yeah, did we mention it's free?
+      </h2>
+    </div>
+    <div>
+      <div>
+        <img class="appstore" src="./images/badge-iphone.png">
+      </div>
+      <div>
+        <img class="playstore" src="./images/badge-android.png">
+      </div>
+    </div>
+  </div>
+  <div class="list">
+    <ul>
+      <li>About us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="last-li">&copy; 2014 Instagram</li>
+
+    </ul>
   </div>
 </div>
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blo
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
