Instagram exercice fixed

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="MainContainer">
+      <div class="MainTop"></div>
+      <div class="IgBlock">
+          <div class="IgBlock__left">
+            <img src="images/phones.png" alt="phones">
+          </div>
+          <div class="IgBlock__right">
+            <header class="IgBlock__header">
+              <a href="#" class="IgBlock__header-logo">
+                <img src="images/brand.png" alt="Inatagram logo">
+              </a>
+              <a href="#" class="IgBlock__header-login">
+                <img src="images/home.png" alt="login house">
+                <span>Log in</span>
+              </a>
+            </header>
+            <div class="clearfix"></div>
+            <div class="IgBlock__content">
+              <h1 class="IgBlock__content__title">
+                <strong>Capture and Share the World's Moments</strong>
+              </h1>
+              <div class="IgBlock__content__text">
+                <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p> Oh yeah, did we mention it's free?</p>
+              </div>
+              <div class="IgBlock__content__badge">
+                <a href="#">
+                    <img src="images/badge-iphone.png" alt="Download on the App Store" class="IgBlock__content__badge-item iphone">
+                </a>
+                <a href="#">
+                    <img src="images/badge-android.png" alt="Get it on Google Play" class="IgBlock__content__badge-item android">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="MainBottom">
+            <nav class="Menu">
+              <ul class="MenuList">
+                <li class="MenuList__item"><a href="#">About Us</a></li>
+                <li class="MenuList__item"><a href="#">Support</a></li>
+                <li class="MenuList__item"><a href="#">Blog</a></li>
+                <li class="MenuList__item"><a href="#">Press</a></li>
+                <li class="MenuList__item"><a href="#">API</a></li>
+                <li class="MenuList__item"><a href="#">Jobs</a></li>
+                <li class="MenuList__item"><a href="#">Privacy</a></li>
+                <li class="MenuList__item"><a href="#">Terms</a></li>
+                <li class="MenuList__item Copy"><a href="#">&copy; 2014 Instagram</a></li>
+              </ul>
+            </nav>
+          </div>
+      </div>
+  </div>
 </body>
 </html>
