--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,22 +2,34 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class ="barraAzul"></div>
+  <div class ="cajaPadre">
+    <div class ="imgTlf"></div>
+    <div class ="insLogin"></div> 
+    <div class="parrafo">
+ <h1 class="h1"> Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+  </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+ <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+ </p>
+ <p>
   Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
+</p>
+    <div class="botones">
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
+</div>
+    
+ </div>   
+  <div class="links">
+  <strong>About Us
   Support
   Blog
   Press
@@ -25,7 +37,10 @@
   Jobs
   Privacy
   Terms
-
-  &copy; 2014 Instagram
+    &copy; 2014 Instagram
+  </strong>  
+</div>
+  </div>
 </body>
 </html>
+
