--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,7 +4,9 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <!---Instagram--->
+  <img src = "images/brand.png">
+  <button type = "button"><img src = "images/home.png">Log in</button>
 
   Capture and Share the World's Moments
 
