--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <section>
+    <div class="left-section">
+    <img src="images/phones.png" class="phones">
+    </div>
+    <div class="middle-section">
+      <img src="images/brand.png" class="brand">
+    </div>
+    <div class="right-section">
+      <button class="button"><img src="images/home.png" class="home"><span>Log in</span></button>
+    </div>
+  <article class="capture"><img src="images/frame.png" class="frame">
+    <div class="share"><h1>Capture and Share<br> the World's Moments</h1>
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life<br> with friends and family.<br><br>
+  Take a picture or video, choose a filter to transform its look<br>and feel, then post to Instagram &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br><br>
+  Oh yeah, did we mention it's free?</p><br>
+  <img src="images/badge-iphone.png" class="apple">
+  <img src="images/badge-android.png" class="google">
+  </div>
+  </article>
+</section>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="copyright">&copy; 2014 Instagram</li>
+</ul>
+</footer>
 </body>
 </html>
