css ejercico dia 3

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <title>Instagram</title>
+  <meta name="author" content="Guille LA">
+  <meta name="description" content="This is my solution to third day CSS and HTM exercise">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
+  <header class="header">
 
-  Capture and Share the World's Moments
+  </header>
+  
+  <div class="phone-image">
+    <img src="images/phones.png">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="brand">
+      <img src="images/brand.png">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="home">
+    <img src="images/home.png"> <p>Log in</p>
+  </div>
+ 
+  <div class="main-text-box">
 
-  Oh yeah, did we mention it's free?
+    <div class="main-text">
+      <h2>Capture and Share the World's Moments</h2>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.Oh yeah, did we mention it's free?</p>
+    </div>
+
+    <div class="button-apple">
+      <a href="#"><img src="images/badge-iphone.png" href="#"></a>
+    </div>
+
+    <div class="button-google">
+      <a href="#"><img src="images/badge-android.png" href="#"></a>
+    </div>
+
+  </div>
+  
+  
+  <ul class="list">
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="trademark">&copy; 2014 Instagram</li>
+  </ul>
+
+  
 </body>
 </html>
