--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,35 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="cabecera"></div>
+  <img class="telefonos" src="images/phones.png" alt="móviles">
+  <div class="logo"><img class="logotipo" src="images/brand.png" alt="instagram">
+  <a href="#"><div class="login"><img class="loginhome" src="images/home.png">Log in </div></a></div>
+  <div id="recuadro"> <h2>Capture and Share <br>the World's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <span class="negrita">fast</span>, <span class="negrita">beautiful</span> and <span class="negrita">fun</span> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
+  <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+    <a href="#"><img class="logogoogle" src="images/badge-android.png" alt="Get it on Google Play"></a>
 
-  Oh yeah, did we mention it's free?
+</div>
+<div id="footer">
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <span class="copy">&copy; 2014 Instagram</span>
+</div>
 </body>
 </html>
