--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="header-blue">
+    <div class="container">
+      <div class="phones col-1-2">
+        <img class="logo" src="./images/phones.png" alt="Android & iPhone Phone's">
+      </div>
+      <div class="col-2-2">
+        <div class="header">
+          <img src="./images/brand.png" alt="Instagram">
+          <div class="button-login">
+            <a href="#"><img src="./images/home.png" alt="home"><span>Log in</span></a>
+          </div>
+        </div>
+        <div class="content-wrap">
+          <div class="content">
+              <h1>Capture and Share</br>the World's Moments</h1> 
+            
+              <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+            
+              <img src="./images/badge-iphone.png" alt="Donwload on the App Store">
+              <img src="images/badge-android.png" alt="Get it on Google Play">
+            </div>
+          </div>
+        </div>
+      <div class="footer">
+        <ul class="menu-bottom">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><span class="copy">&copy; 2014 Instagram</span></li>
+        </ul>  
+      </div>
+    </div>
+  </div>
 </body>
 </html>
