css in progress

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset = "UTF-8">
   <title>Instagram</title>
+  <link rel = "stylesheet" type = "text/css" href = "css/main.css">
 </head>
 <body>
+  <section class = "contenedor-1 box">
+        <img src = "images/phones.png">
+  </section>
+
   <!---Instagram--->
-  <img src = "images/brand.png">
-  <button type = "button"><img src = "images/home.png">Log in</button>
+  <section class = "contenedor-2 box">
+  <div class = "logo box"><img class = "logo" src = "images/brand.png"></div>
+  <div class = "button box"><button type = "button"><img src = "images/home.png">Log in</button></div>
+  </section>
 
-  Capture and Share the World's Moments
+  <section class = "contenedor-3 box">
+  <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <pre>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</pre>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <!--Download on the App Store-->
+  <img src = "images/badge-iphone.png">
+  <!--Get it on Google Play-->
+  <img src = "images/badge-android.png">
+  </section>
+  
+  <footer>
+    <ul>
+  <li class = "no-list box">About Us</li>
+  <li class = "no-list box">Support</li>
+  <li class = "no-list box">Blog</li>
+  <li class = "no-list box">Press</li>
+  <li class = "no-list box">API</li>
+  <li class = "no-list box">Jobs</li>
+  <li class = "no-list box" >Privacy</li>
+  <li class = "no-list box">Terms</li>
+    </ul>
+  <p>&copy; 2014 Instagram</p>
+  </footer>
 </body>
 </html>
