--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  
+  <div class="iphone-box"></div>
 
-  Capture and Share the World's Moments
+  <div class="main-box">
+    <div class="logo-box">
+      <ul>
+        <li><img src="./images/brand.png" alt="Instagram Logo"></li>
+        <li><img src="./images/home.png" alt="Home Logo">Log in</li>
+      </ul>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="frame-box">
+      <h1 class="frame-title">Capture and Share the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look
+        and feel, then post to Instagram &mdash; it's that easy. You can
+        even share to Facebook, Twitter, Tumblr and more. It's
+        a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <ul>
+        <li><img src="./images/badge-iphone.png" alt="Download on the App Store"></li>
+        <li><img src="./images/badge-android.png" alt="Get it on Google Play"></li>
+      </ul>
+    </div>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="footer-box"> 
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    &copy; 2014 Instagram
+  </div>
 </body>
 </html>
