--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,10 +12,11 @@
       </div>
       <div class="col-2-2">
         <div class="header">
-          <img src="./images/brand.png" alt="Instagram">
-          <div class="button-login">
-            <a href="#"><img src="./images/home.png" alt="home"><span>Log in</span></a>
-          </div>
+          <img class="logo" src="./images/brand.png" alt="Instagram">
+          <a href="#">
+            <img src="./images/home.png" alt="home">
+            <span>Log in</span>
+          </a>
         </div>
         <div class="content-wrap">
           <div class="content">
@@ -24,9 +25,10 @@
               <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
               <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
               <p>Oh yeah, did we mention it's free?</p>
-            
-              <img src="./images/badge-iphone.png" alt="Donwload on the App Store">
-              <img src="images/badge-android.png" alt="Get it on Google Play">
+              <div class="store">
+                <img src="./images/badge-iphone.png" alt="Donwload on the App Store">
+                <img class="android" src="images/badge-android.png" alt="Get it on Google Play">
+              </div>  
             </div>
           </div>
         </div>
