--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,38 +11,38 @@
   <div class="main-box">
     <div class="logo-box">
       <ul>
-        <li><img src="./images/brand.png" alt="Instagram Logo"></li>
-        <li><img src="./images/home.png" alt="Home Logo">Log in</li>
+        <li class="logo-li1"><img src="./images/brand.png" alt="Instagram Logo" width="75%"></li>
+        <li class="logo-li2 login-button"><img src="./images/home.png" alt="Home Logo">Log in</li>
       </ul>
     </div>
 
     <div class="frame-box">
       <h1 class="frame-title">Capture and Share the World's Moments</h1>
-      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
       <p>Take a picture or video, choose a filter to transform its look
         and feel, then post to Instagram &mdash; it's that easy. You can
         even share to Facebook, Twitter, Tumblr and more. It's
         a new way to see the world.</p>
       <p>Oh yeah, did we mention it's free?</p>
       <ul>
-        <li><img src="./images/badge-iphone.png" alt="Download on the App Store"></li>
-        <li><img src="./images/badge-android.png" alt="Get it on Google Play"></li>
+        <li class="frame-download"><img src="./images/badge-iphone.png" alt="Download on the App Store"></li>
+        <li class="frame-download"><img src="./images/badge-android.png" alt="Get it on Google Play"></li>
       </ul>
     </div>
   </div>
 
-  <div class="footer-box"> 
+  <div class="footer-box cap-style"> 
     <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
+      <li class="footer-float"><a class="no-link" href="#">About Us</a></li>
+      <li class="footer-float"><a class="no-link" href="#">Support</a></li>
+      <li class="footer-float"><a class="no-link" href="#">Blog</a></li>
+      <li class="footer-float"><a class="no-link" href="#">Press</a></li>
+      <li class="footer-float"><a class="no-link" href="#">API</a></li>
+      <li class="footer-float"><a class="no-link" href="#">Jobs</a></li>
+      <li class="footer-float"><a class="no-link" href="#">Privacy</a></li>
+      <li class="footer-float"><a class="no-link" href="#">Terms</a></li>
+      <li class="footer-float">&copy; 2019 Instagram</li>
     </ul>
-    &copy; 2014 Instagram
   </div>
 </body>
 </html>
