Se mejoran los defectos que quedaban

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,7 @@
     <div class="logo-box">
       <ul>
         <li class="logo-li1"><img src="./images/brand.png" alt="Instagram Logo" width="75%"></li>
-        <li class="logo-li2 login-button"><img src="./images/home.png" alt="Home Logo">Log in</li>
+        <li class="logo-li2"><a href="javascript:;" class="login-button btn btn-login"><img src="./images/home.png" alt="Home Logo">Log in</a></li>
       </ul>
     </div>
 
