--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="instagramPage">
+    <div class="information">
+      <div class="instaInformation">
+        <div class="instaHeader">
+          <div class="logo">
+            <img src="images/brand.png" alt="Instagram Logo">
+          </div>
+          <p><span class="casa"><img src="images/home.png" alt="home"></span>log in</p>
+        </div>
+        <div class="clearfix"></div>
+        <div class="instaBody">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p><p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p><p>Oh yeah, did we mention it's free?</p>
+              <div class="badgeImg">
+                  <img src="images/badge-iphone.png" alt="iPhone">
+                  <img src="images/badge-android.png" alt="android">
+              </div>
+        </div>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+  </div>
 </body>
+<footer>
+  <div class="footerInformation">
+    <p>About Us</p>
+    <p>Support</p>
+    <p>Blog</p>
+    <p>Press</p>
+    <p>API</p>
+    <p>Jobs</p>
+    <p>Privacy</p>
+    <p>Terms</p>
+    <p><span class="instaGrey">@ 2014 Instagram</span></p>
+  </div>
+</footer>
 </html>
