--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Head   -->
+
 <head>
-  <title>Instagram</title>
-</head>
+    <title>Instagram</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  </head>
+
+
+<!-- Body -->
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+ <!-- Header -->
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <header class="header">
+    <img class="phones" src="./images/phones.png" alt="phones">
 
-  Oh yeah, did we mention it's free?
+    <img class="logo" src="./images/brand.png" alt="instagram">
+    <button class="btn" type="submit"><img src="./images/home.png"> Log In</button>
+    
 
-  Download on the App Store
-  Get it on Google Play
+  </header>
+  
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+<!-- Box -->
+
+<div class="box">
+
+  <h2>Capture and Share the World's Moments</h2>
+
+  <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+  <p>Oh yeah, did we mention it's free?</p>
+
+  <img src="./images/badge-iphone.png" alt="iphone">
+  <img src="./images/badge-iphone.png" alt="android">
+
+</div>
+
+
+
+<!-- Footer -->
+
+  <footer class="footer">
+
+
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#"> Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#"> Terms</a>
+        <h5>&copy; 2014 Instagram</h5>
+
+  </footer>
+ 
 </body>
 </html>
