--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,27 +4,28 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <h1>Instagram</h1>
 
-  Capture and Share the World's Moments
+  <h2>Capture and Share the World's Moments</h2>
+  
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <img>
+  <img>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <nav>
+  <a href=#>About Us</a>
+  <a href=#>Support</a>
+  <a href=#>Blog</a>
+  <a href=#>Press</a>
+  <a href=#>API</a>
+  <a href=#>Jobs</a>
+  <a href=#>Privacy</a>
+  <a href=#>Terms</a>
+  </nav>
 
   &copy; 2014 Instagram
 </body>
