--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,8 +4,16 @@
   <title>Instagram</title>
 </head>
 <body>
-  <h1>Instagram</h1>
+  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/bgtile.png" alt="head background">
+  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/phones.png" alt="images of iphones" >
+  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram logo and name">
+  <button type="button">
+      <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/home.png" alt="log in icon"/>
+      Log in
+  </button>
+  
 
+  
   <h2>Capture and Share the World's Moments</h2>
   
   <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
@@ -13,19 +21,24 @@
   <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
   <p>Oh yeah, did we mention it's free?</p>
 
-  <img>
-  <img>
+
+  <button type="button">
+      <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Android button to download">
+  </button>
+  <button type="button">
+      <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="Iphone button to download">
+  </button>
 
   <nav>
-  <a href=#>About Us</a>
-  <a href=#>Support</a>
-  <a href=#>Blog</a>
-  <a href=#>Press</a>
-  <a href=#>API</a>
-  <a href=#>Jobs</a>
-  <a href=#>Privacy</a>
-  <a href=#>Terms</a>
-  </nav>
+      <a href=#>About Us</a>
+      <a href=#>Support</a>
+      <a href=#>Blog</a>
+      <a href=#>Press</a>
+      <a href=#>API</a>
+      <a href=#>Jobs</a>
+      <a href=#>Privacy</a>
+      <a href=#>Terms</a>
+      </nav>
 
   &copy; 2014 Instagram
 </body>
