Set css and conection with html

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <LINK REL=StyleSheet HREF="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/css/main.css" TYPE="text/css">
 </head>
 <body>
-  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/bgtile.png" alt="head background">
-  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/phones.png" alt="images of iphones" >
-  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram logo and name">
-  <button type="button">
+  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/bgtile.png" class="header-img" alt="head background">
+  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/phones.png" class="iphone" alt="images of iphones" >
+  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/brand.png" class="logo" alt="Instagram logo and name">
+  <button class="log-in" type="button">
       <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/home.png" alt="log in icon"/>
       Log in
   </button>
