--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,31 +5,28 @@
   <LINK REL=StyleSheet HREF="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/css/main.css" TYPE="text/css">
 </head>
 <body>
-  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/bgtile.png" class="header-img" alt="head background">
-  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/phones.png" class="iphone" alt="images of iphones" >
+<div class="iphone">  
+  <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/phones.png"  alt="images of iphones" >
+</div>
+<div class="text">
   <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/brand.png" class="logo" alt="Instagram logo and name">
   <button class="log-in" type="button">
       <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/home.png" alt="log in icon"/>
       Log in
   </button>
   
-
-  
   <h2>Capture and Share the World's Moments</h2>
-  
   <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-
   <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
   <p>Oh yeah, did we mention it's free?</p>
-
-
   <button type="button">
       <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Android button to download">
   </button>
   <button type="button">
       <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="Iphone button to download">
   </button>
-
+</div>
+<div>
   <nav>
       <a href=#>About Us</a>
       <a href=#>Support</a>
@@ -40,7 +37,7 @@
       <a href=#>Privacy</a>
       <a href=#>Terms</a>
       </nav>
-
   &copy; 2014 Instagram
+</div>
 </body>
 </html>
