Set the text, the white box and the footer. Start positioning the box

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,19 +14,23 @@
       <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/home.png" alt="log in icon"/>
       Log in
   </button>
-  
-  <h2>Capture and Share the World's Moments</h2>
-  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-  <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-  <p>Oh yeah, did we mention it's free?</p>
-  <button type="button">
-      <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Android button to download">
-  </button>
-  <button type="button">
-      <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="Iphone button to download">
-  </button>
+  <div>
+    <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/frame.png" class="white-box">
+    <div class="text-box">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <button type="button" class="button">
+        <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Android button to download">
+      </button>
+      <button type="button">
+        <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="Iphone button to download">
+      </button>
+    </div>
+  </div>
 </div>
-<div>
+<div class="footer"> 
   <nav>
       <a href=#>About Us</a>
       <a href=#>Support</a>
