Set position to text and cages

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,7 +8,7 @@
 <div class="iphone">  
   <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/phones.png"  alt="images of iphones" >
 </div>
-<div class="text">
+<div class="right-box">
   <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/brand.png" class="logo" alt="Instagram logo and name">
   <button class="log-in" type="button">
       <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/home.png" alt="log in icon"/>
@@ -17,10 +17,10 @@
   <div>
     <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/frame.png" class="white-box">
     <div class="text-box">
-      <h2>Capture and Share the World's Moments</h2>
-      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
-      <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-      <p>Oh yeah, did we mention it's free?</p>
+      <h2 class="h2 text">Capture and Share the World's Moments</h2>
+      <p class="text">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p class="text">  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p class="text">Oh yeah, did we mention it's free?</p>
       <button type="button" class="button">
         <img src="/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Android button to download">
       </button>
