setted the position of everything

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -32,16 +32,16 @@
 </div>
 <div class="footer"> 
   <nav>
-      <a href=#>About Us</a>
-      <a href=#>Support</a>
-      <a href=#>Blog</a>
-      <a href=#>Press</a>
-      <a href=#>API</a>
-      <a href=#>Jobs</a>
-      <a href=#>Privacy</a>
-      <a href=#>Terms</a>
+      <a class="link" href=#>About Us</a>
+      <a class="link" href=#>Support</a>
+      <a class="link" href=#>Blog</a>
+      <a class="link" href=#>Press</a>
+      <a class="link" href=#>API</a>
+      <a class="link" href=#>Jobs</a>
+      <a class="link" href=#>Privacy</a>
+      <a class="link" href=#>Terms</a>
+      <p>&copy; 2014 Instagram</p>
       </nav>
-  &copy; 2014 Instagram
 </div>
 </body>
 </html>
