--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -40,7 +40,7 @@
       <a class="link" href=#>Jobs</a>
       <a class="link" href=#>Privacy</a>
       <a class="link" href=#>Terms</a>
-      <p>&copy; 2014 Instagram</p>
+      <a class="copy link">&copy; 2014 Instagram</a>
       </nav>
 </div>
 </body>
