--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="bck-color">
+    <div class="phones">
+      <img src="./images/phones.png">
+    </div>
+    <div class="sct-block">
+      <img src="images/brand.png">
+      <form class="form">
+        <button class="button"><img class="bttn-icon" src="images/home.png">
+          <span>Log in</span>
+        </button>
+      </form>
+      <img src="images/frame.png">
+      <section class="text">
+        <h2>Capture and Share <br>the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> 
+          and <strong>fun</strong> way to share your life 
+          with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look 
+          and feel, then post to Instagram &mdash; it's that easy. You can 
+          even share to Facebook, Twitter, Tumblr and more. It's a new way 
+          to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="button2">
+          <form>
+            <button class="bttn-icon2">
+              <img src="images/badge-iphone.png">
+            </button>
+            <button class="bttn-icon2">
+              <img src="images/badge-android.png">
+            </button>
+        </form>
+        </div>
+      </section>
+    </div>
+    <footer class="foot">    
+      <nav class="footer">
+        <p><a href="#">About Us</a></p>
+        <p><a href="#">Support</a></p>
+        <p><a href="#">Blog</a></p>
+        <p><a href="#">Press</a></p>
+        <p><a href="#">API</a></p>
+        <p><a href="#">Jobs</a></p>
+        <p><a href="#">Privacy</a></p>
+        <p><a href="#">Terms</a></p>
+        <p>&copy; 2014 Instagram</p>
+      </nav>
+    </footer>
+  </div>
 </body>
 </html>
