--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="main-content">
+    <div class="phones">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div class="second-content">
+    <div class="brand">
+      <img src="images/brand.png" alt="">
+    </div>
+    <div class="login">
+      <div class="login_img">
+        <img src="images/home.png" alt=""> <span class="login_title">Log in</span>
+    </div>
+    </div>
 
-  Capture and Share the World's Moments
+  <div class="content">
+    <div class="content-title"><h2>Capture and Share <br> the World's Moments</h2></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+    <p>Oh yeah, did we mention it's free?</p>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  
+  <div class="downloads">
+    <img src="images/badge-iphone.png" alt="">
+    <img src="images/badge-android.png" alt="">
+  </div>
+</div>
+  
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<footer>
+  <ul class="list">
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+  
 
-  &copy; 2014 Instagram
+  
+</footer>
+
+
 </body>
+
+
 </html>
