--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -31,24 +31,23 @@
   Oh yeah, did we mention it's free?</p><br>
   </div>
   <!--Download on the App Store-->
-  
-  <img class = "col-2" src = "images/badge-iphone.png">
+  <a href = "https://itunes.apple.com/es/app/instagram/id389801252?mt=8" target = "_blank"><img class = "col-2" src = "images/badge-iphone.png"></a>
   <!--Get it on Google Play-->
-  <img class = "col-2" src = "images/badge-android.png">
+  <a href = "https://play.google.com/store/apps/details?id=com.instagram.android&hl=es" target = "_blank"><img class = "col-2 img-android" src = "images/badge-android.png"></a>
   
   </section>
   
   <footer>
     <div class = "links">
     <ul>
-  <li class = "no-list box"><a href = "">About Us</a></li>
-  <li class = "no-list box"><a href = "">Support</a></li>
-  <li class = "no-list box"><a href = "">Blog</a></li>
-  <li class = "no-list box"><a href = "">Press</a></li>
-  <li class = "no-list box"><a href = "">API</a></li>
-  <li class = "no-list box"><a href = "">Jobs</a></li>
-  <li class = "no-list box"><a href = "">Privacy</a></li>
-  <li class = "no-list box"><a href = "">Terms</a></li>
+  <li class = "no-list box"><a href = "#">About Us</a></li>
+  <li class = "no-list box"><a href = "#">Support</a></li>
+  <li class = "no-list box"><a href = "#">Blog</a></li>
+  <li class = "no-list box"><a href = "#">Press</a></li>
+  <li class = "no-list box"><a href = "#">API</a></li>
+  <li class = "no-list box"><a href = "#">Jobs</a></li>
+  <li class = "no-list box"><a href = "#">Privacy</a></li>
+  <li class = "no-list box"><a href = "#">Terms</a></li>
     </ul>
     </div>
     <div class = "copy">
